# sens

./: .gitignore  Cargo.toml  Cross.toml  LICENSE  README.md  deny.toml
.github/workflows/: ci.yml  release.yml
docs/: ARCHITECTURE.md  SECURITY_HARDENING_CHANGELOG.md
fuzz/: Cargo.toml
fuzz/fuzz_targets/: config_parse.rs  modbus_response.rs  mqtt_payload.rs
src/: bounded.rs  commands.rs  config.rs  error.rs  gpio.rs  health.rs  interning.rs  main.rs  modbus.rs  mqtt.rs  offline_queue.rs  provisioning.rs  security.rs  shutdown.rs  telemetry.rs
src/resilience/: circuit_breaker.rs  mod.rs  rate_limiter.rs  timeout.rs
src/scripting/: actions.rs  conflict.rs  context.rs  engine.rs  fb_registry.rs  limits.rs  mod.rs  parallel.rs  persistence.rs  storage.rs  triggers.rs
src/scripting/function_blocks/: counters.rs  edge_triggers.rs  mod.rs  timers.rs
systemd/: suderra-agent.service
