[package]
name = "suderra-agent-fuzz"
version = "0.0.0"
edition = "2021"
publish = false

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
serde_yaml = "0.9"
serde_json = "1.0"
arbitrary = { version = "1.3", features = ["derive"] }

[dependencies.suderra-agent]
path = ".."

# Fuzz targets
[[bin]]
name = "config_parse"
path = "fuzz_targets/config_parse.rs"
test = false
doc = false
bench = false

[[bin]]
name = "mqtt_payload"
path = "fuzz_targets/mqtt_payload.rs"
test = false
doc = false
bench = false

[[bin]]
name = "modbus_response"
path = "fuzz_targets/modbus_response.rs"
test = false
doc = false
bench = false
